[tool.poetry]
name = "acolyte"
version = "0.1.0"
description = ""
authors = ["Jason Rebelo <igotinfected@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.14.0"
"discord.py" = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
mypy = "^0.782"
pytest-coverage = "^0.0"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
